--- a/src/components/SearchResultsView/SearchResultsView.scss
+++ b/src/components/SearchResultsView/SearchResultsView.scss
@@ -349,3 +349,26 @@ div h3.searching-message {
   display:inline-block;
   width:34px; height:20px; margin-left:5px; position:relative; top:5px;
 }
+
+.pagination {
+  float: right;
+  .pagination_icon {
+    cursor: pointer;
+    display: inline-block;
+    border: 1px solid black;
+    margin: .5ex;
+    text-align: center;
+    vertical-align: middle;
+    // margin: .2ex .4ex;
+    // padding: 0 .2em;
+    font-size: 1.5rem;
+    width: 1em;
+    height: 1em;
+    padding-right: 1em;
+    &:hover {
+      color: $interactive-color;
+      background: lighten($light-grey,3%);
+      text-decoration:none;
+    }
+  }
+}
