stop showing null in NumberEditor

--- a/src/components/CaseEditor.scss
+++ b/src/components/CaseEditor.scss
@@ -37,6 +37,7 @@
   margin-top: 14px;
   padding-top:14px;
   display:inline-block;
+  text-transform: capitalize;
 }
 .sub-sub-heading + div {
   display:inline;
