--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -49,7 +49,7 @@
   }
   .edit-profile-button {
     display: block;
-    background-color: #ff6f00;
+    background-color: $interactive-color;
     color: #fff;
     font-size: 22px;
     font-weight: 100;
@@ -69,7 +69,7 @@
     font-size: 2rem;
     font-weight: 400;
     line-height: 48px;
-    margin-bottom: 24px;
+    margin-bottom: 21px;
     display: block;
     @include media-breakpoint-down(sm) {
       font-size: 24px;
@@ -77,6 +77,19 @@
     }
     &.organization {
       padding-top: 28px;
+    }
+  }
+  .biography-input {
+    hr {
+      display: none;
+    }
+    textarea {
+      padding-left: 14px !important;
+      min-height: 77px;
+      border: 2px solid $dark-grey !important;
+      &:focus {
+        border: 2px solid #3f51b2 !important;
+      }
     }
   }
   .divider {
@@ -112,19 +125,6 @@
       padding: 0;
       padding-top: 32px;
     }
-  }
-
-
-  .biography-input {
-    display: block;
-    border: 2px solid $dark-grey;
-    font-weight: 300;
-    padding: 16px;
-    width: 100%;
-    box-sizing: border-box;
-    height: 240px;
-    line-height: 28px;
-    font-size: 20px;
   }
 
   .name {
