--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -266,7 +266,7 @@ section.image-gallery {
     padding:0 15px;
 
     .case-box {
-      padding: 48px 0;
+      padding: 0 0 48px 0;
 
       .category {
         color: $grey-text;
