--- a/src/react-dropzone-s3-uploader.scss
+++ b/src/react-dropzone-s3-uploader.scss
@@ -1,19 +1,25 @@
 @import "./UniversalStyles";
 
 .react-dropzone-s3-uploader {
-  width: 460px;
-  height: 40px;
+  width: 385px;
+  height: 49px;
   border: solid 2px $black;
-  border-radius: 5;
   position: relative;
   cursor: pointer;
   overflow: hidden;
   svg {
     visibility: hidden;
   }
+  &:after {
+    content: 'Select a photo from your device';
+    color: rgba(0, 0, 0, 0.47);
+    position: absolute;
+    left: 0;
+    top: 0; 
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+  }
   @include media-breakpoint-down(sm){
-    width: 56px;
-    height: 56px;
-    float: right;
+    width: 255px;
   }
 }
