--- a/src/components/CaseEditor.scss
+++ b/src/components/CaseEditor.scss
@@ -25,7 +25,7 @@
 .custom-field, .tags-field {
   border: 2px solid $black;
   padding-left: 1rem;
-  @include media-breakpoint-up(sm) {
+  @include media-breakpoint-up(lg) {
     width: 50% !important;
   }
   >div {
@@ -47,7 +47,7 @@
 }
 
 .custom-select {
-  @include media-breakpoint-up(sm) {
+  @include media-breakpoint-up(lg) {
     width: 50% !important;
   }
   border: 2px solid $black;
@@ -65,6 +65,7 @@
   margin-top:40px;
   padding-top: 20px;
   border-top:1px solid #ccc;
+  text-transform: capitalize;
   &.org {
     font-size: 0.6rem;
   }
