--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -1,18 +1,9 @@
 @import "../../UniversalStyles";
 @import "../../../node_modules/react-image-gallery/styles/scss/image-gallery.scss";
 
-.single-image {
-  text-align: center;
-  max-width:720px;
-  img {
-    max-width: 100%;
-    max-height: 500px;
-  }
-}
-
 section.image-gallery {
   max-width:720px;
-  .image-gallery-image {
+  .single-image {
     max-height: 500px;
     background-color: #000;
     text-align: center;
@@ -26,6 +17,13 @@ section.image-gallery {
   }
   button:focus {
     outline: none;
+  }
+}
+
+.image-gallery-thumbnails-container a {
+  div {
+    height: 70px;
+    overflow: hidden; 
   }
 }
 
