--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -123,7 +123,7 @@ section.image-gallery {
     }
 
     .tags {
-      a.tag {
+      span {
         display: inline-block;
         font-size: 14px;
         color: #888;
