--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -46,7 +46,7 @@ section.image-gallery {
     }
   }
 
-  .sidepanel {
+  .sidepanel, .mobile-metadata {
     padding: 0 15px;
     margin-top: 48px;
     position:relative;
@@ -111,6 +111,7 @@ section.image-gallery {
     }
     .sub-sub-heading + div.tags {
       display: block;
+      word-wrap: break-word;
     }
     
     .sub-sub-heading + div a {
