--- a/src/bootstrap-custom.scss
+++ b/src/bootstrap-custom.scss
@@ -6,12 +6,12 @@
  */
 
 // Core variables and mixins
-@import "../node_modules/bootstrap/scss/custom";
+@import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
 
 // Reset and dependencies
-@import "../node_modules/bootstrap/scss/normalize";
+// @import "../node_modules/bootstrap/scss/normalize";
 @import "../node_modules/bootstrap/scss/print";
 
 // Core CSS
@@ -41,7 +41,6 @@
 // @import "../node_modules/bootstrap/scss/progress";
 // @import "../node_modules/bootstrap/scss/media";
 // @import "../node_modules/bootstrap/scss/list-group";
-@import "../node_modules/bootstrap/scss/responsive-embed";
 // @import "../node_modules/bootstrap/scss/close";
 
 // Components w/ JavaScript
