removed specific topic from quick submit

--- a/src/components/QuickSubmitPicker/QuickSubmitPicker.scss
+++ b/src/components/QuickSubmitPicker/QuickSubmitPicker.scss
@@ -7,6 +7,9 @@
   .col-xs-10 {
     padding-top: 3%;
   }
+  @include media-breakpoint-only(md) {
+    padding-top: 14%;
+  }
 	p {
     padding: 14px 0;
     text-align: center;
