--- a/src/react-dropzone-s3-uploader.scss
+++ b/src/react-dropzone-s3-uploader.scss
@@ -1,7 +1,7 @@
 @import "./UniversalStyles";
 
 .react-dropzone-s3-uploader {
-  width: 385px;
+  width: 60%;
   height: 49px;
   border: solid 2px $black;
   position: relative;
