--- a/src/components/CaseEditor.scss
+++ b/src/components/CaseEditor.scss
@@ -26,7 +26,7 @@
   border: 2px solid $black;
   padding-left: 1rem;
   @include media-breakpoint-up(lg) {
-    width: 50% !important;
+    width: 60% !important;
   }
   >div {
     display: none;
@@ -48,7 +48,7 @@
 
 .custom-select {
   @include media-breakpoint-up(lg) {
-    width: 50% !important;
+    width: 60% !important;
   }
   border: 2px solid $black;
   padding-left: 1rem;
@@ -65,6 +65,9 @@
   margin-top:40px;
   padding-top: 20px;
   border-top:1px solid #ccc;
+  &.top {
+    border: none;
+  }
   text-transform: capitalize;
   &.org {
     font-size: 0.6rem;
