--- a/src/bootstrap-custom.scss
+++ b/src/bootstrap-custom.scss
@@ -6,8 +6,8 @@
  */
 
 // Core variables and mixins
-@import "../node_modules/bootstrap/scss/functions";
-@import "../node_modules/bootstrap/scss/variables";
+// @import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/_variables";
 @import "../node_modules/bootstrap/scss/mixins";
 
 // Reset and dependencies
