cleaning up some warnings

--- a/src/components/SearchHit/SearchHit.scss
+++ b/src/components/SearchHit/SearchHit.scss
@@ -121,7 +121,8 @@ small.label {
 
 .list-item {
   .thumbnail {
-    margin-bottom:0;
+    margin-bottom: 0;
+    margin-top: 0.4rem;
   }
   .list-body {
     padding-right: 7%;
