--- a/src/components/HelpBar/HelpBar.scss
+++ b/src/components/HelpBar/HelpBar.scss
@@ -4,101 +4,83 @@
   width: 480px;
   background-color: #fff;
   position: fixed;
-  bottom: 0;
+  bottom: -14px;
   right: 0;
   z-index: 10000;
   margin-right: 64px;
   height: 60%;
+  box-shadow: 0 27px 24px 0 rgba(0,0,0,0.2), 0 40px 77px 0 rgba(0,0,0,0.219608);
   @include media-breakpoint-down(sm) {
     width: 80%;
     margin: 0 auto;
   }
   .top-area {
-    position: relative;
-    .top-area-inner {
-      position: absolute;
-      width: 100%;
-    }
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    background-color: $primary-color;
   }
   .title-section {
-    background-color: #3f51b2;
     padding: 24px;
-    height: 20px;
+    position: relative;
+    svg.go-back {
+      transform: translateY(-1px);
+      margin-right: 1.5rem;
+      cursor:pointer;
+      float: left;
+    }
     .help-title {
-      font-size: 26px;
       color: #fff;
       font-weight: 400;
+      margin: 0;
       float: left;
     }
     .close-help {
-      background-image: url(/img/pp-close-icon-white.png);
-      display: block;
-      float: right;
+      cursor: pointer;
+      position: absolute;
+      right: 20px;
+      top: 24px;
       width: 24px;
       height: 24px;
-      background-repeat: no-repeat;
-      background-size: contain;
-      margin-top: -2px;
-    }
-  }
-  .search-box-section {
-    background-color: #3f51b2;
-    padding: 0 24px 24px;
-    .search-input {
-      width: 100%;
-      border: 0;
-      padding: 0px;
-      font-size: 1rem;
-      background-color: rgba(255, 255, 255, 0.25);
-      height: 40px;
-      color: #fff;
-      font-weight: 100;
-      padding-left: 36px;
-      background-image: url(/static/media/search-icon.47a5c168.png);
-      background-repeat: no-repeat;
-      background-size: 16px;
-      background-position: 12px 12px;
-      box-sizing: border-box;
-
-      &::-webkit-input-placeholder {
-        color: rgba(255, 255, 255, 0.8);
-      }
-
-      &::-moz-placeholder {
-        color: rgba(255, 255, 255, 0.8);
-      }
-
-      &:-ms-input-placeholder {
-        color: rgba(255, 255, 255, 0.8);
-      }
-
-      &:-moz-placeholder {
-        color: rgba(255, 255, 255, 0.8);
-      }
-
     }
   }
   .data-section {
-    border-left: 2px solid #ddd;
-    border-right: 2px solid #ddd;
-    padding: 16px 0;
     height: 100%;
     overflow: scroll;
     box-sizing: border-box;
-    padding-top: 148px;
     width: 100%;
+    margin-top: 4rem;
+    padding-bottom: 4rem;
+    .card {
+      box-shadow: 0 2px 5px 0 rgba(0,0,0,0.258824), 0 2px 10px 0 rgba(0,0,0,0.156863);
+      &.contact {
+        padding: 20px;
+        font-size: 0.9rem;
+        a {
+          color: $primary-color;
+          font-size: 1.1rem;
+        }
+        svg {
+          transform: translateY(7px);
+          margin-right: 1.5rem;
+        }
+      }
+    }
     .data-title {
-      font-size: 24px;
-      color: #3f51b2;
+      color: $primary-color;
+      margin: 0;
       padding: 20px;
     }
     .data-list {
-      li a {
-        font-size: 20px;
-        padding: 20px;
-        display: block;
-        &:hover, &:focus {
-          background-color: $dark-grey;
+      li {
+        a {
+          cursor: pointer;
+          font-size: 1.1rem;
+          padding: 20px;
+          display: block;
+          &:hover, &:focus {
+            background-color: $dark-grey;
+          }
         }
       }
     }
