--- a/src/components/CaseEditor.scss
+++ b/src/components/CaseEditor.scss
@@ -68,10 +68,13 @@
   &.top {
     border: none;
   }
-  text-transform: capitalize;
   &.org {
     font-size: 0.6rem;
   }
+}
+
+#undefined-Selectanissue-* {
+  color: blue !important;
 }
 
 
@@ -176,6 +179,20 @@
       }
       .checkbox {
         background-image: url("../img/star.png");
+      }
+    }
+  }
+}
+
+.new {
+  button {
+    div div {
+      span {
+        &:after {
+          content: '|  +';
+          padding-left: 9px;
+          white-space: pre;
+        }
       }
     }
   }
