--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -30,8 +30,8 @@
     overflow: hidden;
     .change-avatar-button {
       background-color: rgba(0, 0, 0, 0.5);
-      border: solid 2px red;
-      height: 40px;
+      // border: solid 2px red;
+      height: 50px;
       position: absolute;
       bottom: 0;
       left: 0;
