--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -29,6 +29,7 @@
     position: relative;
     overflow: hidden;
     .change-avatar-button {
+      display: none;
       background-color: rgba(0, 0, 0, 0.5);
       // border: solid 2px red;
       height: 50px;
