added feature tour, need to add handler to privateRoute
two steps work for loginAvatar

added more steps

removed beacon from /case/id

added tour to Case.js

fixed editButton

--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -28,7 +28,7 @@
     position: relative;
     overflow: hidden;
     .change-avatar-button {
-      display: none;
+      // display: none;
       background-color: rgba(0, 0, 0, 0.5);
       height: 50px;
       position: absolute;
