--- a/src/components/BodyEditor.scss
+++ b/src/components/BodyEditor.scss
@@ -1,72 +1,17 @@
 @import "../UniversalStyles";
 
-// These are shared with ItemDetails.scss, but I don't know how to actually share them 
-// within a selector.  @andreadelrio maybe knows?
-
-.ql-editor {
-  h3 {
-    font-weight: 600;
-    line-height: 40px;
-    margin-bottom: 12px;
-    margin-top: 32px;
-  }
-
-  p, li {
-    font-size: 1.2rem; 
-    font-weight: 400;
-    line-height: 1.9rem;
-    margin-bottom: 20px;
-    max-width:720px;
-  }
-  
-  em {
-    font-weight:400;
-  }
-
-  li {
-    list-style-type: square;
-    margin-left: 32px;
-    margin-bottom: 8px;
-    padding-left: 8px;
-  }
-
-  ol {
-    li {
-      list-style-type: lower-roman;
-    }
-  }
-
-  a {
-    color: $primary-color;
-    font-weight: 600;
-    position:relative;
-    cursor:pointer;
-    &:hover, &:focus {
-      color:$interactive-color;
-    }
-  }
+.rdw-storybook-wrapper {
+  // border: 1px solid #ece8e6;
 }
 
+.rdw-editor-toolbar, .rdw-storybook-editor {
+  border: 1px solid #F1F1F1;
+}
 
-._quill {
-  .body-editor-box
-    &.fixed {
-      margin-top: 40px;  
-      .quill {
-        .ql-toolbar {
-          position: fixed;
-          top: 75px;
-          background-color: #fff;
-          z-index: 10;
-        }
-      }
-    }
-  .quill {
-    @include media-breakpoint-down(sm){
-      border-top: 1px solid $dark-grey;  
-      .ql-toolbar {
-        display: none;
-      }
-    }  
-  }
+.rdw-option-wrapper {
+  border: none !important;
+}
+
+.rdw-storybook-editor {
+  padding-left: 1rem;
 }
