--- a/src/components/PropEditors.scss
+++ b/src/components/PropEditors.scss
@@ -18,12 +18,24 @@
   margin-bottom: 1rem;
   div>div {
     width: 100% !important;
-    padding-left: 1rem;
+    padding-left: 0.5rem;
     hr {
       display: none;
     }
   }
+  .clearable-datepicker {
+    position: relative;
+    .dismiss {
+      position: absolute;
+      right: 12px;
+      top: 12px;
+      width: 20px !important;
+      padding: 0 !important;
+      cursor: pointer;
+    }
+  }
 }
+
 
 .list {
   >div>div>div {
