implementing the new Profile page

--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -252,11 +252,11 @@
 
 // reset the extra padding in this div for consistency 
 // set max width for this element
-.container-fluid {
-  padding-left:0;
-  padding-right:0;
-  max-width:1440px;
-}
+// .container-fluid {
+//   padding-left:0;
+//   padding-right:0;
+//   max-width:1440px;
+// }
 
 .error-message {
   padding: 2em;
